--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,82 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2>About Page</h2>
-{% endblock %}
+<h2>About Page</h2>
+<p>
+    The formation of the group grew out of a meeting Gandalf had with
+    Thorin in Bree which kindled Thorin's interest in
+    recapturing his long lost family inheritance. (Thorin's grandfather had
+    been the King under the Mountain when Smaug came and took it.)
+    Remembering that he had once known an adventurous Hobbit on his travels
+    in the Shire, Gandalf decided to add Bilbo to their company because he
+    knew that stealth and cunning were preferable to force. Gandalf
+    also believed that someone like Bilbo could keep the sometimes prideful
+    and stubborn Dwarves from rash action. The superstitious Dwarves also
+    considered thirteen to be an unlucky number, and as Gandalf had planned
+    to leave on other business, welcomed a fourteenth to fill into their
+    party.
+</p>
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Thorin Oakenshield</h3>
+        <p>
+            Thorin II was born in TA 2746 to the Dwarf prince Thráin II in the
+            city of the Lonely Mountain. Early in his youth, Thorin and the
+            other Dwarves of the Lonely Mountain were forced to flee by the
+            dragon Smaug, in TA 2770. While in exile, he quickly grew into a
+            capable warrior. This was demonstrated at the Battle of Azanulbizar,
+            near Moria, in TA 2799. He fought with one of the Dwarven armies
+            beneath Moria's East-gate, and at some point in the battle, his
+            shield broke, and, using an oaken tree branch found on the ground
+            as a shield, he gained the epithet "Oakenshield," which remained
+            with him even in death.
+        </p>
+    </div>
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/e/ec/1400193_695248260488487_320403599_o.jpg"
+            alt="Thorin Oakenshield">
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-5">
+            <img class="featurette-image img-fluid mx-auto"
+                src="https://static.wikia.nocookie.net/lotr/images/a/a6/HBT-DWF-003.jpg" alt="Fili and Kili">
+        </div>
+        <div class="col-md-7">
+            <h3>Fili and Kili</h3>
+            <p>
+                Fíli and Kíli were brothers, the youngest of the thirteen
+                dwarves who set out on Thorin Oakenshield's quest along with
+                Bilbo Baggins to reclaim the Lonely Mountain from Smaug. They
+                were also nephews of Thorin, sons of his sister Dís. They were
+                close kin of Dain II Ironfoot, who would later become King
+                under the Mountain after the death of Thorin in the Battle of
+                Five Armies.
+                <br>
+                <br>
+                Fíli and Kíli were born in the Ered Luin in the year TA 2859. At
+                the time of the quest, Fíli was 82, and Kíli was 77 years old.
+                They were considered young for Dwarves, equivalent to being in
+                their late twenties or early thirties in human terms.
+                <br>
+                <br>
+                Fíli and Kíli were the only Dwarves in the company to have
+                lived their whole lives in the Ered Luin, and had never before
+                travelled east of the Misty Mountains. They were also the only
+                Dwarves in the company who had not fought in the Battle of
+                Azanulbizar, as they were too young at the time.
+                <br>
+                <br>
+                Fíli and Kíli were described as being tall for Dwarves, with
+                blue hoods and yellow beards. They were also said to be fair of
+                face, as most of the members of Thorin's company were. They had
+                the best eyesight and the keenest hearing of the Dwarves in the
+                company, and were also the quickest to react. They were also the
+                strongest of the Dwarves in the company, and were said to be
+                as strong as any two other companions. They were also said to
+                be as brave as any of the companions, and were the only ones to
+                volunteer to enter the dragon's lair with Bilbo.
+            </p>
+        </div>
+        {% endblock %}
