--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}">
-    <title>Hello Flask</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}"
+		type="text/css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/clean-blog.min.css') }}" type="text/css">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+	<title>Hello Flask</title>
 </head>
+
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 		<div class="container">
 			<a class="navbar-brand" href="{{ url_for('index') }}">Thorin &amp; Company</a>
-			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-	        Menu
-	        <i class="fas fa-bars"></i>
-	      </button>
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+				data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+				aria-label="Toggle navigation">
+				Menu
+				<i class="fas fa-bars"></i>
+			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
@@ -35,9 +41,10 @@
 			</div>
 		</div>
 	</nav>
-	
+
 	<!-- Page Header -->
-	<header class="masthead" style="background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png')">
+	<header class="masthead"
+		style="background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png')">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -50,17 +57,17 @@
 			</div>
 		</div>
 	</header>
-	
+
 	<!-- Main Content -->
 	<div class="container">
 
-        {% block content %}
-        {% endblock %}
+		{% block content %}
+		{% endblock %}
 
 	</div>
-	
+
 	<hr>
-	
+
 	<!-- Footer -->
 	<footer>
 		<div class="container">
@@ -70,38 +77,39 @@
 						<li class="list-inline-item">
 							<a href="#">
 								<span class="fa-stack fa-lg">
-	                  <i class="fas fa-circle fa-stack-2x"></i>
-	                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-	                </span>
+									<i class="fas fa-circle fa-stack-2x"></i>
+									<i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+								</span>
 							</a>
 						</li>
 						<li class="list-inline-item">
 							<a href="#">
 								<span class="fa-stack fa-lg">
-	                  <i class="fas fa-circle fa-stack-2x"></i>
-	                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-	                </span>
+									<i class="fas fa-circle fa-stack-2x"></i>
+									<i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+								</span>
 							</a>
 						</li>
 						<li class="list-inline-item">
 							<a href="#">
 								<span class="fa-stack fa-lg">
-	                  <i class="fas fa-circle fa-stack-2x"></i>
-	                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-	                </span>
+									<i class="fas fa-circle fa-stack-2x"></i>
+									<i class="fab fa-github fa-stack-1x fa-inverse"></i>
+								</span>
 							</a>
 						</li>
 					</ul>
-					<p class="copyright text-muted">Copyright &#9426; Thorin & Co Website <span id="copyright"></span></p>
+					<p class="copyright text-muted">Copyright &#9426; Thorin & Co Website <span id="copyright"></span>
+					</p>
 				</div>
 			</div>
 		</div>
 	</footer>
-	
+
 	<!-- Bootstrap core JavaScript -->
 	<script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-	
+
 	<!-- Custom scripts for this template -->
 	<script src="{{ url_for('static', filename='js/clean-blog.min.js') }}"></script>
 
@@ -112,4 +120,5 @@
 	</script>
 
 </body>
+
 </html>
