Add more biographies and images to about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -34,49 +34,305 @@
     </div>
     <div class="col-md-5">
         <img class="featurette-image img-fluid mx-auto"
-            src="https://static.wikia.nocookie.net/lotr/images/e/ec/1400193_695248260488487_320403599_o.jpg"
-            alt="Thorin Oakenshield">
+            src="https://vignette.wikia.nocookie.net/lotr/images/3/3f/ThorinBIG.jpg" alt="Thorin Oakenshield">
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/a/a6/HBT-DWF-003.jpg" alt="Fili and Kili">
+    </div>
+    <div class="col-md-7">
+        <h3>Fili and Kili</h3>
+        <p>
+            Fíli and Kíli were brothers, the youngest of the thirteen
+            dwarves who set out on Thorin Oakenshield's quest along with
+            Bilbo Baggins to reclaim the Lonely Mountain from Smaug. They
+            were also nephews of Thorin, sons of his sister Dís. They were
+            close kin of Dain II Ironfoot, who would later become King
+            under the Mountain after the death of Thorin in the Battle of
+            Five Armies.
+            <br>
+            <br>
+            Fíli and Kíli were born in the Ered Luin in the year TA 2859. At
+            the time of the quest, Fíli was 82, and Kíli was 77 years old.
+            They were considered young for Dwarves, equivalent to being in
+            their late twenties or early thirties in human terms.
+            <br>
+            <br>
+            Fíli and Kíli were the only Dwarves in the company to have
+            lived their whole lives in the Ered Luin, and had never before
+            travelled east of the Misty Mountains. They were also the only
+            Dwarves in the company who had not fought in the Battle of
+            Azanulbizar, as they were too young at the time.
+            <br>
+            <br>
+            Fíli and Kíli were described as being tall for Dwarves, with
+            blue hoods and yellow beards. They were also said to be fair of
+            face, as most of the members of Thorin's company were. They had
+            the best eyesight and the keenest hearing of the Dwarves in the
+            company, and were also the quickest to react. They were also the
+            strongest of the Dwarves in the company, and were said to be
+            as strong as any two other companions. They were also said to
+            be as brave as any of the companions, and were the only ones to
+            volunteer to enter the dragon's lair with Bilbo.
+        </p>
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Oin</h3>
+        <p>
+            Oin was a Dwarf of Durin's Folk, second cousin to Thorin
+            Oakenshield. He was one of the thirteen Dwarves who took
+            part in the quest for Erebor, which was Bilbo Baggins's
+            great adventure.
+            <br>
+            <br>
+            Oin was the brother of Gloin, and the uncle of Gimli, who
+            later became a member of the Fellowship of the Ring. He was
+            also the cousin of Balin and Dwalin, and the brother-in-law
+            of Nain.
+            <br>
+            <br>
+            Oin was born in TA 2774, and was 178 years old at the time
+            of the quest. He was described as being a "remote kinsman"
+            of Thorin, and was the second cousin of Balin and Dwalin.
+            <br>
+            <br>
+            Oin was described as being a "bombur-like" Dwarf, and was
+            said to be a "grumpy" Dwarf. He was also said to be a
+            "fierce fighter", and was armed with a mattock. He was also
+            said to be a "skilled healer", and was the only Dwarf in
+            the company who knew anything about herbs and healing.
+        </p>
+    </div>
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/2/20/Oin_2.jpg" alt="Oin">
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/f/fc/Gloin_2.jpg" alt="Gloin">
+    </div>
+    <div class="col-md-7">
+        <h3>Gloin</h3>
+        <p>
+            Gloin was a Dwarf of Durin's Folk, the son of Gróin, the
+            brother of Óin, and the father of Gimli, who later
+            became a member of the Fellowship of the Ring.
+            He was one of the twelve companions of Thorin and Bilbo
+            on the quest to regain the Lonely Mountain.
+            <br>
+            <br>
+            Gloin was born in TA 2783, and was 169 years old at the
+            time of the quest. He was described as being a
+            "remote kinsman" of Thorin, and was the second cousin
+            of Balin and Dwalin.
+        </p>
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Balin</h3>
+        <p>
+            Balin was a Dwarf leader, the son of Fundin, and
+            elder brother of Dwalin. He was one of the twelve
+            companions of Thorin and Bilbo on the quest to
+            regain the Lonely Mountain.
+            <br>
+            <br>
+            Balin was born in TA 2763, and was 178 years old at
+            the time of the quest. He was described as being a
+            "remote kinsman" of Thorin, and was the second
+            cousin of Gloin and Oin.
+            <br>
+            <br>
+            A Dwarf Lord known for his wise counsel and
+            willingness to listen, he was one of Thorin's
+            closest friends and advisers. Balin was distantly
+            related to him, and a descendant of the
+            noble House of Durin.
+            <br>
+            <br>
+            He later went to re-establish the Dwarf presence
+            in Moria, but within five years it was overcome
+            once more by Orcs, and he was killed there along
+            with the rest of his companions.
+        </p>
     </div>
 
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto"
-                src="https://static.wikia.nocookie.net/lotr/images/a/a6/HBT-DWF-003.jpg" alt="Fili and Kili">
-        </div>
-        <div class="col-md-7">
-            <h3>Fili and Kili</h3>
-            <p>
-                Fíli and Kíli were brothers, the youngest of the thirteen
-                dwarves who set out on Thorin Oakenshield's quest along with
-                Bilbo Baggins to reclaim the Lonely Mountain from Smaug. They
-                were also nephews of Thorin, sons of his sister Dís. They were
-                close kin of Dain II Ironfoot, who would later become King
-                under the Mountain after the death of Thorin in the Battle of
-                Five Armies.
-                <br>
-                <br>
-                Fíli and Kíli were born in the Ered Luin in the year TA 2859. At
-                the time of the quest, Fíli was 82, and Kíli was 77 years old.
-                They were considered young for Dwarves, equivalent to being in
-                their late twenties or early thirties in human terms.
-                <br>
-                <br>
-                Fíli and Kíli were the only Dwarves in the company to have
-                lived their whole lives in the Ered Luin, and had never before
-                travelled east of the Misty Mountains. They were also the only
-                Dwarves in the company who had not fought in the Battle of
-                Azanulbizar, as they were too young at the time.
-                <br>
-                <br>
-                Fíli and Kíli were described as being tall for Dwarves, with
-                blue hoods and yellow beards. They were also said to be fair of
-                face, as most of the members of Thorin's company were. They had
-                the best eyesight and the keenest hearing of the Dwarves in the
-                company, and were also the quickest to react. They were also the
-                strongest of the Dwarves in the company, and were said to be
-                as strong as any two other companions. They were also said to
-                be as brave as any of the companions, and were the only ones to
-                volunteer to enter the dragon's lair with Bilbo.
-            </p>
-        </div>
-        {% endblock %}
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/5/52/Balin.jpg" alt="Balin">
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/1/1c/Dwalin.jpg" alt="Dwalin">
+    </div>
+    <div class="col-md-7">
+        <h3>Dwalin</h3>
+        <p>
+            Dwalin was a Dwarf of Durin's Folk, the youngest son of Fundin,
+            elder brother of Balin, and the cousin of Thorin Oakenshield.
+            He was one of the twelve companions of Thorin and Bilbo on the quest
+            to regain the Lonely Mountain.
+            <br>
+            <br>
+            Dwalin was born in TA 2772, and was 169 years old at the time
+            of the quest. He was described as being a "remote kinsman" of
+            Thorin, and was the second cousin of Gloin and Oin.
+            <br>
+            <br>
+            Dwalin was said to be a "grim" and "stern" Dwarf, and was
+            armed with a long axe. He was also said to be a "fierce
+            fighter", and was the strongest of the Dwarves in the
+            company, and was said to be as strong as any two other
+            companions. He was also said to be as brave as any of the
+            companions, and was the first to arrive at Bilbo's house
+            on the night of the Unexpected Party.
+        </p>
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Ori</h3>
+        <p>
+            Ori was a Dwarf of Durin's Folk, the younger brother of Dori
+            and Nori, and a distant relative of Thorin Oakenshield.
+            Ori lived in Thorin's Halls in the northern Blue Mountains for many
+            years, alongside his cousins: Dori and Nori. In the year TA 2941,
+            Ori became a member of Thorin's Company and travelled with Thorin,
+            Gandalf, Bilbo Baggins, and the other Dwarves on the quest for the
+            Lonely Mountain, culminating in the death of Smaug.
+            Finally, he and the other Dwarves of Thorin's Company fought in the
+            Battle of Five Armies in TA 2942, which he survived.
+            <br>
+            <br>
+            Ori was born in TA 2774, and was 167 years old at the time of
+            the quest. He was described as being a "remote kinsman" of
+            Thorin, and was the second cousin of Balin and Dwalin.
+            <br>
+            <br>
+            Ori was said to be a "good-natured" Dwarf, and was armed with
+            a slingshot. He was also said to be a "fierce fighter", and
+            was the strongest of the Dwarves in the company, and was said
+            to be as strong as any two other companions. He was also said
+            to be as brave as any of the companions, and was the first to
+            arrive at Bilbo's house on the night of the Unexpected Party.
+        </p>
+    </div>
+
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/8/81/Ori.jpeg" alt="Ori">
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/4/44/Doriinpeterjacksonsthehobbit.jpg" alt="Dori">
+    </div>
+    <div class="col-md-7">
+        <h3>Dori</h3>
+        <p>
+            Dori was a Dwarf of Durin's Folk, the elder brother of Nori
+            and Ori, and a distant relative of Thorin Oakenshield.
+            Dori lived in Thorin's Halls in the northern Blue Mountains for
+            many years, alongside his brothers: Nori and Ori. In the year
+            TA 2941, Dori became a member of Thorin's Company and travelled
+            with Thorin, Gandalf, Bilbo Baggins, and the other Dwarves on
+            the quest for the Lonely Mountain, culminating in the death of
+            Smaug. Finally, he and the other Dwarves of Thorin's Company
+            fought in the Battle of Five Armies in TA 2942, which he survived.
+            <br>
+            <br>
+            Dori was born in TA 2772, and was 169 years old at the time of
+            the quest. He was described as being a "remote kinsman" of
+            Thorin, and was the second cousin of Gloin and Oin.
+            <br>
+            <br>
+            Dori was said to be a "good-natured" Dwarf, and was armed with
+            a slingshot. He was also said to be a "fierce fighter", and
+            was the strongest of the Dwarves in the company, and was said
+            to be as strong as any two other companions. He was also said
+            to be as brave as any of the companions, and was the first to
+            arrive at Bilbo's house on the night of the Unexpected Party.
+            <br>
+            <br>
+            Dori was among the Dwarves at Bag End who joined in singing about
+            "blunting the knives" and "bending the forks"; as well as
+            accompanying by playing the flute. He was described as
+            “decent fellow despite his grumbling”. He often wore a red-violet
+            coat while on the Quest for Erebor. He was noted by Thorin to be
+            the strongest of the thirteen companions.
+        </p>
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Nori</h3>
+        <p>
+            Nori was a Dwarf of Durin's Folk. He had a brother named Dori as
+            well as a cousin named Ori, and was a remote kinsman of Thorin
+            Oakenshield.
+            <br>
+            <br>
+            Nori lived in Thorin's Halls in the northern Blue Mountains for
+            many years, alongside his brothers: Dori and Ori. In the year
+            TA 2941, Nori became a member of Thorin's Company and travelled
+            with Thorin, Gandalf, Bilbo Baggins, and the other Dwarves on
+            the quest for the Lonely Mountain, culminating in the death of
+            Smaug. Finally, he and the other Dwarves of Thorin's Company
+            fought in the Battle of Five Armies in TA 2942, which he survived.
+            <br>
+            <br>
+            He played the flute, and was very fond of regular and plentiful
+            meals like his Hobbit friend, Bilbo Baggins.
+        </p>
+    </div>
+
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/5/50/Untitled-31.png" alt="Nori">
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/7/73/Bifur_2.jpg" alt="Bifor">
+    </div>
+    <div class="col-md-7">
+        <h3>Bifor</h3>
+        <p>
+            Bifur was a Dwarf of the late-Third Age. He is best known for being
+            a companion to Bilbo Baggins and Thorin Oakenshield on the quest to
+            regain the Lonely Mountain, along with his cousins Bofur and Bombur.
+            <br>
+            <br>
+            Whilst he was a descendant of the Dwarves of Khazad-dûm, Bifur was
+            not related to the royal House of Durin. Most of his familial
+            relations are unclear, and what is known of his parentage is very
+            little. He and his family were driven out of their home in the
+            Lonely Mountain by the dragon Smaug, and were forced to live in
+            exile, where the Dwarf warrior worked as a toy maker.
+            Following Thorin II Oakenshield to a new life at his halls in the
+            Blue Mountains, he continued his life as a toy maker.
+        </p>
+    </div>
+</div>
+
+{% endblock %}
