--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,9 @@
 .col-md-5 img {
     width: 100%;
-    /* height: 100%; */
-    /* object-fit: cover; */
+    margin-top: 70px;      
+    margin-bottom: 60px;
 }
+
+
+
+
