--- a/templates/base.html
+++ b/templates/base.html
@@ -43,8 +43,8 @@
 	</nav>
 
 	<!-- Page Header -->
-	<header class="masthead"
-		style="background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png')">
+	<header class="masthead" id="header-bg-img"
+		style="background-image: url('https://www.nme.com/wp-content/uploads/2016/09/hobbit21072011-696x428.jpg')">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
