Add short byographies and images of the remaining dwarves, Gandalf and Bilbo

--- a/templates/about.html
+++ b/templates/about.html
@@ -335,4 +335,117 @@
     </div>
 </div>
 
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Bofur</h3>
+        <p>
+            Bofur was a Dwarf who lived in the late Third Age. He is best known
+            as a companion of Bilbo Baggins, Thorin Oakenshield, and Gandalf on
+            the quest to reclaim the Lonely Mountain from the dragon Smaug,
+            along with his brother Bombur and cousin Bifur.
+            <br>
+            <br>
+            Bofur was not a very wealthy Dwarf, and had to work for a living.
+            He was a toy-maker, and was also a miner. He was a descendant of
+            the Dwarves of Khazad-dûm, but was not related to the royal House
+            of Durin. He and his family were driven out of their home in the
+            Lonely Mountain by the dragon Smaug, and were forced to live in
+            exile, where the Dwarf warrior worked as a toy maker.
+            <br>
+            <br>
+            Following Thorin II Oakenshield to a new life at his halls in the
+            Blue Mountains, he continued his life as a toy maker.
+        </p>
+    </div>
+
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/e/ef/Bofurmattock.jpg" alt="Bofur">
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/e/ed/Bombur.jpg" alt="Bombur">
+    </div>
+    <div class="col-md-7">
+        <h3>Bombur</h3>
+        <p>
+            Bombur's parentage is unknown. He was the brother of Bofur and
+            cousin of Bifur. Bombur was not of Durin's line, although he was
+            descended from the Dwarves of Khazad-dûm. His birth date is unknown,
+            though it fell somewhere between TA 2763 and TA 2859;
+            the brothers Fíli and Kíli were the youngest of the thirteen
+            "by some fifty years," and, after Thorin was captured, Balin was
+            "the eldest left." Fíli was born in TA 2859, and Balin was born
+            in TA 2763. Bombur was thus roughly 150 years old during the quest.
+            Prior to the journey, Bombur likely resided in the Blue Mountains
+            alongside Thorin, after the loss of Thráin II.
+            <br>
+            <br>
+            Bombur was a descendant of the Dwarves of Khazad-dûm, but was not
+            related to the royal House of Durin. He and his family were driven
+            out of their home in the Lonely Mountain by the dragon Smaug, and
+            were forced to live in exile, where the Dwarf warrior worked as a
+            toy maker.
+            <br>
+            <br>
+            Following Thorin II Oakenshield to a new life at his halls in the
+            Blue Mountains, he continued his life as a toy maker.
+        </p>
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-7">
+        <h3>Gangalf (wizard)</h3>
+        <p>
+            Gandalf was a Maia sent to Middle-earth in the Third Age to combat
+            the threat of Sauron. He joined Thorin and his company to reclaim
+            the Lonely Mountain from the dragon Smaug. He was one of the five
+            Istari sent to Middle-earth by the Valar in the Third Age. In
+            Valinor he was known as Olórin, and was said to be the wisest
+            of the Maiar. Gandalf was instrumental in bringing about the demise
+            of Smaug the Dragon in the quest undertaken by Thorin Oakenshield
+            and Company to reclaim Erebor. He later fought in the Battle of the
+            Five Armies, and was instrumental in the founding of the realms
+            of Dale and the Lonely Mountain after the defeat of Smaug.
+            <br>
+            <br>
+            Gandalf was born in Valinor during the Years of the Trees, before
+            the First Age had begun. He was a Maia spirit who lived in the
+            Undying Lands. He was known as Olórin
+        </p>
+    </div>
+
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/8/8d/Gandalf-2.jpg" alt="Gangalf">
+    </div>
+</div>
+
+<div class="row featurette">
+    <div class="col-md-5">
+        <img class="featurette-image img-fluid mx-auto"
+            src="https://static.wikia.nocookie.net/lotr/images/7/74/011712-hobbit-mirkwood-still.jpg"
+            alt="Bilbo Baggins (burglar)">
+    </div>
+    <div class="col-md-7">
+        <h3>Bilbo Baggins (burglar)</h3>
+        <p>
+            Bilbo Baggins was a Hobbit of the Shire, the main protagonist of
+            The Hobbit and a secondary character in The Lord of the Rings.
+            Gandalf suggested Bilbo Baggins to be hired by Thorin and Company
+            to be their burglar in the Quest of Erebor, and later fought in
+            the Battle of the Five Armies. Bilbo was born on 22 September
+            T.A. 2890. His mother was Belladonna Took, daughter of the Old
+            Took, and his father was Bungo Baggins. They lived in the
+            prestigious Bag End, a luxurious hobbit-hole built by the Bagginses
+            in the side of The Hill. Bilbo was also the uncle of Frodo Baggins,
+            the main protagonist of The Lord of the Rings.
+        </p>
+    </div>
+</div>
+
 {% endblock %}
