--- a/templates/base.html
+++ b/templates/base.html
@@ -43,8 +43,7 @@
 	</nav>
 
 	<!-- Page Header -->
-	<header class="masthead" id="header-bg-img"
-		style="background-image: url('https://www.nme.com/wp-content/uploads/2016/09/hobbit21072011-696x428.jpg')">
+	<header class="masthead" id="header-bg-img" style="background-image: url(static/img/thorin.png)">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
