Add contents to About Page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,16 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
-{% for number in list_of_numbers %}
-<p>{{ number }}</p>
-{% endfor %}
-
-
+{{ company[0]["name"] }}
 
 <h2>{{ page_title }}</h2>
+
 <p>
-    The formation of the group grew out of a meeting Gandalf had with
-    Thorin in Bree which kindled Thorin's interest in
+    The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest in
     recapturing his long lost family inheritance. (Thorin's grandfather had
     been the King under the Mountain when Smaug came and took it.)
     Remembering that he had once known an adventurous Hobbit on his travels
@@ -27,7 +23,7 @@
     <div class="col-md-7">
         <h3>Thorin Oakenshield</h3>
         <p>
-            Thorin II was born in TA 2746 to the Dwarf prince Thráin II in the
+            Thorin II was born in TA 2746 to the Dwarf prince Thrain II in the
             city of the Lonely Mountain. Early in his youth, Thorin and the
             other Dwarves of the Lonely Mountain were forced to flee by the
             dragon Smaug, in TA 2770. While in exile, he quickly grew into a
@@ -323,7 +319,7 @@
             src="https://static.wikia.nocookie.net/lotr/images/7/73/Bifur_2.jpg" alt="Bifor">
     </div>
     <div class="col-md-7">
-        <h3>Bifor</h3>
+        <h3>Bifur</h3>
         <p>
             Bifur was a Dwarf of the late-Third Age. He is best known for being
             a companion to Bilbo Baggins and Thorin Oakenshield on the quest to
