--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
 
 	<!-- Page Header -->
 	<header class="masthead"
-		style="background-image: url('https://pre00.deviantart.net/9ae0/th/pre/f/2013/275/8/f/the_hobbit__thorin_and_company_by_art_calavera-d5nay7b.png')">
+		style="background-image: url('https://terrasubarctica.files.wordpress.com/2013/01/13dwarvesofficial.jpg')">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
